--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
     "@project-serum/serum": "^0.13.65",
+    "@solana/spl-token": "^0.4.8",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.8.4",
     "borsh": "^2.0.0",
