--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.8.4",
     "borsh": "^2.0.0",
+    "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.9",
+    "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
